# managesf

./: .coveragerc  .gitignore  .gitreview  .zuul.yaml  CHANGELOG  MANIFEST.in  README.md  groups  managesf-rservice.service  managesf.service  managesf.spec  project.config  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
docs/: Makefile  generate-resources-docs.py
docs/man/: sfmanager.1
docs/source/: conf.py  contribute.rst  index.rst  install.rst  plugins.rst  restapi.rst  sfmanager.rst
docs/swagger/: managesf.v2.yaml
etc/: sf-policy.yaml
examples/: external-projects.yml
managesf/: __init__.py  app.py  cli.py  policy.py  rservice.py  sfauth.py
managesf/api/: __init__.py
managesf/cmd/: resources.py
managesf/cmds/: keycloak.py  resources.py
managesf/controllers/: SFuser.py  backup.py  decorators.py  gerrit.py  htp.py  introspection.py  localuser.py  pages.py  root.py  utils.py
managesf/lib/: __init__.py  common.py
managesf/model/: __init__.py
managesf/policies/: __init__.py  backup.py  base.py  config.py  group.py  hooks.py  htpasswd.py  job.py  localuser.py  membership.py  node.py  nodepool.py  pages.py  project.py  resources.py  restore.py  services_users.py  tests.py  zuul.py
managesf/services/: base.py  exceptions.py
managesf/templates/: groups  private-project.config  project.config  readonly-private-project.config  readonly-project.config
managesf/tests/: __init__.py  resources_test_utils.py  test_SFuser.py  test_apiv2.py  test_app.py  test_backup.py  test_cli.py  test_configuration.py  test_gerrit.py  test_gerrit_utils.py  test_htpassword.py  test_localuser.py  test_pages.py  test_policy.py  test_redmine.py  test_resources_engine.py  test_resources_engine_real.py  test_resources_gitacls.py  test_resources_gitrepo.py  test_resources_group.py  test_resources_model.py  test_resources_project.py  test_resources_storyboard.py  test_service.py  test_service_gerrit.py  test_service_jenkins.py  test_service_keycloak.py  test_service_nodepool.py  test_service_redmine.py  test_service_storyboard.py  test_sfauth.py  test_utils.py  test_yamlbackend.py
releasenotes/notes/: add-project-resources-options-attribute-ac62c9885cbd71c1.yaml  change-to-pymysql-4256873574e76488.yaml  new-connection-resources-object-f71f7bcd95ac22bd.yaml  new-tenant-resources-object-cb89ef2bd341263e.yaml  remove-htp-controller-2669de12052ecb74.yaml
(+79 files in other folders)
