[metadata]
name = managesf
summary = Software Factory REST API
description-file = README.md

[files]
packages =
    managesf
data_files =
    etc/managesf = etc/*

[entry_points]
managesf.service =
    SFGerrit = managesf.services.gerrit:SoftwareFactoryGerrit
    SFStoryboard = managesf.services.storyboard:SoftwareFactoryStoryboard
    SFJenkins = managesf.services.jenkins:SoftwareFactoryJenkins
    SFNodepool = managesf.services.nodepool:SoftwareFactoryNodepool
oslo.policy.policies =
    managesf = managesf.policies:list_rules
console_scripts =
    managesf-api = managesf.app:main
