[metadata]
name = managesf
summary = Software Factory REST API
description-file = README.md

[files]
packages =
    managesf
data_files =
    etc/managesf = etc/*

[entry_points]
managesf.service =
    SFGerrit = managesf.services.gerrit:SoftwareFactoryGerrit
    SFStoryboard = managesf.services.storyboard:SoftwareFactoryStoryboard
managesf.v2.resources =
    manageSF = managesf.api.v2.resources.services.manageSF:SFResourcesManager
oslo.policy.policies =
    managesf = managesf.policies:list_rules
console_scripts =
    managesf-api = managesf.app:main
    managesf-configuration = managesf.controllers.api.v2.configurations:cli
    managesf-resources = managesf.cmds.resources:cli
